@@ -1,0 +1,3 @@
+.onLoad <- function(libname, pkgname) {
+    options('nloptr.show.inequality.warning' = TRUE )
+}
